# algo-calisthenics

./: .envrc  .gitignore  README.md  project.clj  pyproject.toml  requirements.txt
.github/: SECURITY.md
app/: main.py
app/api/v1/: backtracking.py  binaryTrees.py  bits.py  datastructures.py  divideAndConquer.py  dynamic.py  graphs.py  greedy.py  hashing.py  heaps.py  intervals.py  matrices.py  randomised.py  searching.py  slidingWindow.py  sorting.py  strings.py  trees.py  tries.py
dev-resources/: llm_prompt.org  new-problem.sh  problem-discussion-template.org  problem_template.org  problem_template.py  problem_template_test.py  problem_template_test_.py
doc/: Known vulnerabilities.csv  Known vulnerabilities.md  Known vulnerabilities.txt  Licenses.csv  known-vulnerabilities.csv  licences.csv
resources/: day-12-grammar.txt  day-13-grammar.txt  day-2-grammar.txt  day-4-grammar.txt  day-5-grammar.txt  day-7-grammar.txt
src/advent_of_code_2020/: day_1.clj  day_10.clj  day_11.clj  day_12.clj  day_12_part_1.clj  day_12_part_2.clj  day_13.clj  day_2.clj  day_3.clj  day_4.clj  day_5.clj  day_6.clj  day_7.clj  day_8.clj  day_9.clj  main.clj
src/cracking_the_coding_interview/arrays_and_strings/: exercice_1_dot_1_is_unique.clj  exercice_1_dot_1_is_unique.org  exercice_1_dot_2_check_permutation.clj  exercice_1_dot_2_check_permutation.org  exercice_1_dot_3_urlify.clj  exercice_1_dot_3_urlify.org  exercice_1_dot_4_palindrome_permutation.clj  exercice_1_dot_4_palindrome_permutation.org  exercice_1_dot_5_one_away.clj  exercice_1_dot_5_one_away.org  exercice_1_dot_6_string_compression.clj  exercice_1_dot_6_string_compression.org  exercice_1_dot_7_rotate_matrix.clj  exercice_1_dot_7_rotate_matrix.org  exercice_1_dot_8_zero_matrix.clj  exercice_1_dot_8_zero_matrix.org  exercice_1_dot_9_string_rotation.clj  exercice_1_dot_9_string_rotation.org
src/cracking_the_coding_interview/trees_and_graphs/: exercice_4_dot_10_check_subtree.clj  exercice_4_dot_10_check_subtree.org  exercice_4_dot_1_route_between_nodes.clj  exercice_4_dot_1_route_between_nodes.org  exercice_4_dot_2_minimal_tree.clj  exercice_4_dot_2_minimal_tree.org  exercice_4_dot_4_check_balanced.clj  exercice_4_dot_4_check_balanced.org  exercice_4_dot_5_validate_bst.clj  exercice_4_dot_5_validate_bst.org  exercice_4_dot_6_successor.clj  exercice_4_dot_6_successor.org  exercice_4_dot_7_build_order.clj  exercice_4_dot_7_build_order.org  exercice_4_dot_8_first_common_ancestor.clj  exercice_4_dot_8_first_common_ancestor.org  exercice_4_dot_9_bst_sequences.clj  exercice_4_dot_9_bst_sequences.org
src/neetcode_practice_2024/arrays_and_hashing/: problem_1_contains_duplicate.clj  problem_1_contains_duplicate.org  problem_1_contains_duplicate.py  problem_2_valid_anagram.org  problem_2_valid_anagram.py  problem_3_two_sum.org  (+11 more)
(+94 files in other folders)
