[tool.poetry]
name = "algo-calisthenics"
version = "0.0.1"
description = "algo-calisthenics"
authors = ["piotr-yuxuan"]

[tool.poetry.dependencies]
python = "^3.9"
annotated-types = "0.5.0"
anyio = "3.7.1"
arrow = "1.2.3"
binaryornot = "0.4.4"
black = "23.7.0"
certifi = "2023.7.22"
chardet = "5.2.0"
charset-normalizer = "3.2.0"
click = "8.1.6"
colorclass = "2.2.2"
cookiecutter = "2.3.0"
dnspython = "2.4.2"
docopt = "0.6.2"
email-validator = "2.0.0.post2"
exceptiongroup = "1.1.2"
fastapi = "0.101.0"
h11 = "0.14.0"
httpcore = "0.17.3"
httptools = "0.6.0"
httpx = "0.24.1"
idna = "3.4"
isort = "5.12.0"
itsdangerous = "2.1.2"
Jinja2 = "3.1.2"
markdown-it-py = "3.0.0"
MarkupSafe = "2.1.3"
mdurl = "0.1.2"
mypy-extensions = "1.0.0"
orjson = "3.9.4"
packaging = "23.1"
pathspec = "0.11.2"
platformdirs = "3.10.0"
pydantic = "2.1.1"
pydantic-extra-types = "2.0.0"
pydantic-settings = "2.0.2"
pydantic_core = "2.4.0"
Pygments = "2.16.1"
python-dateutil = "2.8.2"
python-dotenv = "1.0.0"
python-multipart = "0.0.6"
python-slugify = "8.0.1"
PyYAML = "6.0.1"
requests = "2.31.0"
rich = "13.5.2"
six = "1.16.0"
sniffio = "1.3.0"
starlette = "0.27.0"
terminaltables = "3.1.10"
text-unidecode = "1.3"
tomli = "2.0.1"
typing_extensions = "4.7.1"
ujson = "5.8.0"
urllib3 = "2.0.4"
uvicorn = "0.23.2"
uvloop = "0.17.0"
watchfiles = "0.19.0"
websockets = "11.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
