[tool.poetry]
name = "neetcode-practice-2024"
version = "0.1.0"
description = ""
authors = ["piotr-yuxuan <piotr-yuxuan@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "neetcode_practice_2024", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
pytest-watch = "^4.2.0"
hypothesis = "^6.110.2"
faker = "^26.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
