[tool.poetry]
name = "neetcode-practice-2024"
version = "0.0.0"
description = "Practice playground as well as a reminder of some common, simple, yet powerful algorithms "
authors = ["piotr-yuxuan <piotr-yuxuan@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "neetcode_practice_2024", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
argcomplete = "^3.5.0"
numpy = "^2.2.2"

[tool.poetry.group.dev.dependencies]
chevron = "^0.14.0"
pyyaml = "^6.0.2"
hypothesis = "^6.110.2"
faker = "^26.3.0"
pytest-benchmark = {extras = ["histogram"], version = "^4.0.0"}
pytest-memray = "^1.7.0"
snakeviz = "^2.2.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
